<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/fsize"
        android:layout_toStartOf="@+id/fsize"
        android:text="@string/fname_str"
        android:textColor="@color/textclr"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fsize_str"
        android:textColor="@color/textclr" />


    <TextView
        android:id="@+id/ftype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fname"
        android:text="@string/ftype_str"
        android:textColor="@color/textclr" />


    <LinearLayout
        android:id="@+id/btn_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ftype"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_str"
            android:textStyle="bold" />


        <Button
            android:id="@+id/download"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download_str"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>